objects/zkusps__ShipmateScheduledJobsSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores ZenKraft Shipmate app custom settings for scheduled apex jobs. There should only be one record max per org. Do not create a record manually or edit it manually. Use the interface available on the USPS Shipments Tab.</description>
    <fields>
        <fullName>zkusps__scheduledTrackEndTime__c</fullName>
        <label>Scheduled Track End Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__scheduledTrackFrequency__c</fullName>
        <label>Scheduled Track Frequency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__scheduledTrackFriTracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled Track Fri Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__scheduledTrackMonTracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled Track Mon Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__scheduledTrackSatTracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled Track Sat Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__scheduledTrackShipmentId__c</fullName>
        <label>Scheduled Track Shipment ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__scheduledTrackStartTime__c</fullName>
        <label>Scheduled Track Start Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__scheduledTrackSunTracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled Track Sun Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__scheduledTrackThursTracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled Track Thurs Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__scheduledTrackTuesTracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled Track Tues Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__scheduledTrackWedTracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled Track Wed Tracking</label>
        <type>Checkbox</type>
    </fields>
    <label>USPS Shipmate Scheduled Jobs Settings</label>
</CustomObject>